--- a/tasks/core/clients.yml
+++ b/tasks/core/clients.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Generate client configurations
-  template:
+  ansible.builtin.template:
     src: "{{ openvpn_client_conf_template }}"
     dest: "{{ openvpn_etcdir }}/ovpns/{{ _openvpn__client }}.ovpn"
     mode: 0o644
@@ -11,7 +11,7 @@
   register: openvpn_clients_changed
 
 - name: Pack clients
-  command: >-
+  ansible.builtin.command: >-
     zip -j
       {{ _openvpn__client }}.zip
       {{ openvpn_keydir }}/issued/{{ _openvpn__client }}.crt
@@ -28,7 +28,7 @@
   when: openvpn_clients_changed.results[index] is changed
 
 - name: Download client credentials
-  fetch:
+  ansible.builtin.fetch:
     src: "{{ openvpn_etcdir }}/ovpns/{{ _openvpn__client }}.zip"
     dest: "{{ openvpn_download_dir }}"
     flat: true
@@ -41,7 +41,7 @@
   tags: openvpn-download
 
 - name: Extract client credentials
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ openvpn_download_dir }}/{{ _openvpn__client }}.zip"
     dest: "{{ openvpn_download_dir }}"
   loop: "{{ openvpn_clients }}"
@@ -55,13 +55,13 @@
   tags: openvpn-download
 
 - name: Create ccd directory
-  file:
+  ansible.builtin.file:
     path: "{{ openvpn_ccd }}"
     state: directory
     mode: 0o755
 
 - name: Upload ccd configs
-  copy:
+  ansible.builtin.copy:
     content: "{{ _openvpn__ccd_config.content }}"
     dest: "{{ openvpn_ccd }}/{{ _openvpn__ccd_config.name }}"
     mode: 0o644
@@ -70,7 +70,7 @@
     loop_var: _openvpn__ccd_config
 
 - name: Disable client-to-client at the IP layer
-  iptables:
+  ansible.builtin.iptables:
     chain: FORWARD
     in_interface: "{{ openvpn_dev }}+"
     out_interface: "{{ openvpn_dev }}+"
