ansible-lint: read-client-files.yml

--- a/tasks/core/read-client-files.yml
+++ b/tasks/core/read-client-files.yml
@@ -1,12 +1,12 @@
 ---
 - name: Read CA file
-  command: cat "{{ openvpn_keydir }}/ca.crt"
+  ansible.builtin.command: cat "{{ openvpn_keydir }}/ca.crt"
   no_log: true
   register: openvpn_read_ca_file_results
   changed_when: false
 
 - name: Read TLS-auth key
-  slurp:
+  ansible.builtin.slurp:
     src: "{{ openvpn_etcdir }}/ovpns/{{ openvpn_tls_key }}"
   no_log: true
   register: openvpn_read_tlsauth_file_results
@@ -14,12 +14,10 @@
   when: openvpn_tls_auth
 
 - name: Read client cert files
-  command: >-
+  ansible.builtin.command: >-
     sed -n
     '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p'
     {{ openvpn_keydir }}/issued/{{ _openvpn__client }}.crt
-  args:
-    warn: false
   no_log: true
   changed_when: false
   register: openvpn_read_client_cert_files_results
@@ -28,7 +26,7 @@
     loop_var: _openvpn__client
 
 - name: Read client key files
-  command: cat {{ openvpn_keydir }}/private/{{ _openvpn__client }}.key
+  ansible.builtin.command: cat {{ openvpn_keydir }}/private/{{ _openvpn__client }}.key
   no_log: true
   changed_when: false
   register: openvpn_read_client_key_files_results
@@ -37,7 +35,7 @@
     loop_var: _openvpn__client
 
 - name: Set client cert and CA info as fact
-  set_fact:
+  ansible.builtin.set_fact:
     openvpn_ca_file_contents:
       "{{ openvpn_read_ca_file_results.stdout }}"
     openvpn_client_cert_output:
@@ -46,7 +44,7 @@
       "{{ openvpn_read_client_key_files_results.results }}"
 
 - name: Set tls auth file contents as fact
-  set_fact:
+  ansible.builtin.set_fact:
     openvpn_tls_auth_file_contents: >-
       {{
         openvpn_read_tlsauth_file_results['content']
