--- a/tasks/authentication/ldap.yml
+++ b/tasks/authentication/ldap.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Setup LDAP
-  template:
+  ansible.builtin.template:
     src: authentication/auth-ldap.conf.j2
     dest: /etc/openvpn/auth-ldap.conf
     mode: 0o644
