--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 
-- import_tasks: openvpn.yml
+- name: Import tasks openvpn.yml
+  ansible.builtin.import_tasks: openvpn.yml
   when: openvpn_enabled | bool
   tags: openvpn
