--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -1,47 +1,64 @@
----
+- name: Include Variable Definitions
+  ansible.builtin.include_tasks: variables.yml
 
-- include_tasks: variables.yml
+- name: Include Assertion Checks
+  ansible.builtin.include_tasks: assertions.yml
 
-- include_tasks: assertions.yml
+- name: Include OS Specific Installation Tasks
+  ansible.builtin.include_tasks: "core/install/{{ ansible_os_family }}.yml"
 
-- include_tasks: "core/install/{{ ansible_os_family }}.yml"
-
-- include_tasks: core/management.yml
+- name: Include Management Configuration Tasks
+  ansible.builtin.include_tasks: core/management.yml
   when: openvpn_management_enable | bool
 
-- include_tasks: core/configure.yml
+- name: Include OpenVPN Core Configuration Tasks
+  ansible.builtin.include_tasks: core/configure.yml
 
-- include_tasks: system/forwarding.yml
+- name: Include Network Forwarding Configuration Tasks
+  ansible.builtin.include_tasks: system/forwarding.yml
 
-- include_tasks: system/firewall-deps.yml
+- name: Include Firewall Dependency Configuration Tasks
+  ansible.builtin.include_tasks: system/firewall-deps.yml
   when:
     openvpn_open_firewall | bool
     or openvpn_route_traffic | bool
     or openvpn_client_to_client_via_ip | bool
 
-- include_tasks: system/firewall-open.yml
+- name: Open Firewall Ports for OpenVPN
+  ansible.builtin.include_tasks: system/firewall-open.yml
   when: openvpn_open_firewall | bool
 
-- include_tasks: system/routing.yml
+- name: Include Routing Configuration Tasks
+  ansible.builtin.include_tasks: system/routing.yml
   when: openvpn_route_traffic | bool
 
-- include_tasks: core/read-client-files.yml
+- name: Read Unified Client Profile Files
+  ansible.builtin.include_tasks: core/read-client-files.yml
   when: openvpn_unified_client_profiles
 
-- include_tasks: authentication/ldap.yml
+- name: Include LDAP Authentication Configuration
+  ansible.builtin.include_tasks: authentication/ldap.yml
 
-- include_tasks: authentication/pam.yml
+- name: Include PAM Authentication Configuration
+  ansible.builtin.include_tasks: authentication/pam.yml
 
-- include_tasks: authentication/simple.yml
+- name: Include Simple Authentication Configuration
+  ansible.builtin.include_tasks: authentication/simple.yml
 
-- include_tasks: authentication/tls.yml
+- name: Include TLS Authentication Configuration
+  ansible.builtin.include_tasks: authentication/tls.yml
 
-- import_tasks: core/clients.yml
+- name: Include Client-Specific Configuration Tasks
+  ansible.builtin.import_tasks: core/clients.yml
 
-- include_tasks: scripts.yml
+- name: Include Custom Scripting Tasks
+  ansible.builtin.include_tasks: scripts.yml
 
-- include_tasks: "system/bridge/{{ ansible_os_family }}.yml"
+- name: Include OS Specific Bridging Configuration Tasks (1)
+  ansible.builtin.include_tasks: "system/bridge/{{ ansible_os_family }}.yml"
 
-- include_tasks: "system/bridge/{{ ansible_os_family }}.yml"
+- name: Include OS Specific Bridging Configuration Tasks (2)
+  ansible.builtin.include_tasks: "system/bridge/{{ ansible_os_family }}.yml"
 
-- include_tasks: service.yml
+- name: Include Service Configuration and Management Tasks
+  ansible.builtin.include_tasks: service.yml
