--- a/tasks/scripts.yml
+++ b/tasks/scripts.yml
@@ -1,23 +1,22 @@
 ---
 
 - name: Create directories for the scripts to write into
-  file:
+  ansible.builtin.file:
     path: "{{ _openvpn__output_dir }}"
     state: directory
     mode: '753'
-    # The openvpn user (the 'other') needs to write and execute the script dirs.
   loop: "{{ openvpn_script_output_directories }}"
   loop_control:
     loop_var: _openvpn__output_dir
 
 - name: Create scripts directory
-  file:
+  ansible.builtin.file:
     path: "{{ openvpn_scripts_dir }}"
     state: directory
     mode: 0o755
 
 - name: Upload script files
-  template:
+  ansible.builtin.template:
     src: "{{ _openvpn__script }}"
     dest: "{{ openvpn_scripts_dir }}/{{ _openvpn__script | basename | replace('.j2', '') }}"
     owner: "{{ openvpn_user }}"
@@ -28,7 +27,7 @@
     loop_var: _openvpn__script
 
 - name: Upload inline scripts
-  copy:
+  ansible.builtin.copy:
     content: "{{ _openvpn__script.content }}"
     dest: "{{ openvpn_scripts_dir }}/{{ _openvpn__script.name }}"
     owner: "{{ openvpn_user }}"
