--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Ensure OpenVPN is started
-  service:
+  ansible.builtin.service:
     name: "{{ openvpn_service }}"
     state: started
     enabled: true
