--- a/tasks/system/forwarding.yml
+++ b/tasks/system/forwarding.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Set ip forwarding in the sysctl file and reload if necessary
-  sysctl:
+  ansible.posix.sysctl:
     name: net.ipv4.ip_forward
     value: '1'
     sysctl_set: true
