--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Include OS-specific variables.
-  include_vars:
+  ansible.builtin.include_vars:
     file: "{{ lookup('first_found', params) }}"
   vars:
     params:
